2012-03-25 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c (isConformingBody): fixed bug #3509715
	* support/regression/tests/gcc-torture-execute-930513-2.c: reenabled
	* src/SDCCast.c (decorateType): fixed bug #3509713
	* support/regression/tests/gcc-torture-execute-930429-1.c: reenabled
	* src/SDCCicode.c (geniCodeAssign): fixed bug #3509712
	* support/regression/tests/gcc-torture-execute-921016-1.c: reenabled
	* src/SDCCopt.c (optimizeCastCast): fixed bug #3509711
	* support/regression/tests/gcc-torture-execute-921218-1.c: reenabled

2012-03-24 Borut Razem <borut.razem AT gmail.com>

	* support/makebin/makebin.c: applied modified patch
	  #3510671 - [makebin / gbz80] add nintendo logo info in ROM header,
	  thanks to Noel Lemouel

2012-03-24 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/Makefile.in,
	  support/regression/ports/ds390/spec.mk,
	  support/regression/ports/hc08/spec.mk,
	  support/regression/ports/mcs51-common/spec.mk,
	  support/regression/ports/pic14/spec.mk,
	  support/regression/ports/pic16/spec.mk,
	  support/regression/ports/ucgbz80/spec.mk,
	  support/regression/ports/ucr2k/spec.mk,
	  support/regression/ports/ucz180/spec.mk,
	  support/regression/ports/ucz80/spec.mk,
	  support/regression/ports/xa51/spec.mk: attempt to fix bug #3477347
	  
2012-03-24 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCcse.h,
	  src/SDCCcse.c: handle possible pointer aliasing more conservatively
	* src/z80/gen.c (genFunction): reset stack.pushed at function start too

2012-03-22 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-941021-1.c:
	  Disable test for gcc older than 5.0.

2012-03-22 Borut Razem <borut.razem AT gmail.com>

	* doc/sdccman.lyx: double underlined keywords,
	  fixed bug #3510011 - Wrong keyword
	* src/sdcc.vcxproj, src/sdcc.vcxproj.filters:
	  added some missing header files

2012-03-22 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
